base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-python
  labels:
    app: helloworld-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld-python
  template:
    metadata:
      labels:
        app: helloworld-python
    spec:
      containers:
      - name: helloworld-python-container
        image: gugahoi/hello-world-python:1.0.0
        ports:
        - containerPort: 5555
