base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-python
spec:
  selector:
    app: helloworld-python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5555
  type: ClusterIP
