base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: helloworld-python.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-python
            port:
              number: 80
